--- a/src/Components/Loginsignup.css
+++ b/src/Components/Loginsignup.css
@@ -55,7 +55,6 @@
   outline: none;
   color: #797979;
   font-size: 19px;
-  padding-left: 20px;
 }
 
 .forgot-password {
@@ -84,4 +83,9 @@
   font-size: 19px;
   font-weight: 700;
   cursor: pointer;
+}
+.input img {
+  width: 20px;
+  height: 20px;
+  padding: 20px;
 }
