--- a/src/Components/Loginsignup.css
+++ b/src/Components/Loginsignup.css
@@ -18,7 +18,7 @@
   margin-top: 30px;
 }
 .text {
-  color: red;
+  color: blue;
   font-size: 48px;
   font-weight: 700;
 }
@@ -26,7 +26,7 @@
 .underline {
   width: 61px;
   height: 7px;
-  background-color: red;
+  background-color: blue;
   border-radius: 9px;
 }
 
@@ -78,7 +78,7 @@
   width: 180px;
   height: 50px;
   color: #fff;
-  background: red;
+  background: rgb(86, 93, 196);
   border-radius: 50px;
   font-size: 19px;
   font-weight: 700;
